[package]
name = "lpwan"
repository = "https://github.com/rust-iot/rust-lpwan"
description = "An LPWAN Network Stack for rust IoT devices"
keywords = ["iot", "embedded", "lpwan", "wireless", "no_std"]
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"

[features]
# Basic features
std = [ "rand-facade/os_rng", "bytes/std" ]
alloc = []
mocks = []

# Enable defmt logging
log-defmt = [ "defmt", "ieee802154/defmt", "defmt-default" ]

# Defmt log levels
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

default = [ "std", "smoltcp" ]

[dependencies]
radio = "0.9.0"
ieee802154 = { version = "0.3.0" }
log = "0.4.8"
heapless = "0.5.5"
rand_core = "0.5.1"
bytes = { version = "1.0.1", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
defmt = { version = "0.2.1", optional = true }
bitflags = "1.2.1"
byte = "0.2.4"

[dependencies.smoltcp]
version = "0.7.1"
features = [ "proto-ipv6" ]
default-features = false
optional = true

[dependencies.rand-facade]
version = "0.2.0"
default-features = false

[dev-dependencies]
radio = { version = "0.9.0", features = ["mock"] }
simplelog = "0.8.0"
anyhow = "1.0.41"
structopt = "0.3.21"
radio-sx128x = "0.16.0"
embedded-hal = "1.0.0-alpha.4"
driver-pal = "0.8.0-alpha.2"
ctrlc = "3.1.8"
humantime = "2.1.0"
rand = "0.8.3"

[patch.crates-io]
#radio = { path = "../rust-radio" }
#radio-sx128x = { path = "../rust-radio-sx128x" }
radio-sx128x = { git = "https://github.com/ryankurte/rust-radio-sx128x" }
ieee802154 = { git = "https://github.com/ryankurte/rust-ieee802.15.4", branch = "feature/802.15.4-2015-simple" }
