[package]
name = "lpwan"
repository = "https://github.com/rust-iot/rust-lpwan"
description = "An LPWAN Network Stack for rust IoT devices"
keywords = ["iot", "embedded", "lpwan", "wireless", "no_std"]
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
edition = "2018"
license = "MPL-2.0"

[features]
# Basic features
std = [ "bytes/std" ]
alloc = []
mocks = []

# Defmt log levels
defmt-default = [ "defmt", "ieee802154/defmt" ]
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

# Enable defmt logging (requires ieee802154 feature)
log-defmt = [ "defmt", "ieee802154/defmt" ]

# Default features
default = [ "std", "smoltcp" ]

[dependencies]
radio = "0.11.1"
ieee802154 = { version = "0.3.0" }
log = "0.4.17"
heapless = "0.7.10"
rand_core = { version = "0.6.3", default-features = false, features = [ "getrandom" ] }
bytes = { version = "1.0.1", default-features = false }
byteorder = { version = "1.4.3", default-features = false }
defmt = { version = "0.3.2", optional = true }
bitflags = "1.2.1"
byte = "0.2.4"
strum = { version = "0.24.0", default_features = false, features = [ "derive" ] }

[dependencies.smoltcp]
version = "0.7.1"
features = [ "proto-ipv6" ]
default-features = false
optional = true

[dev-dependencies]
radio = { version = "0.11.1", features = ["mock"] }
linux-embedded-hal = "0.4.0-alpha.2"
simplelog = "0.9.0"
anyhow = "1.0.68"
structopt = "0.3.21"
radio-sx128x = "0.18.0"
embedded-hal = "1.0.0-alpha.7"
driver-pal = "0.8.0-alpha.2"
ctrlc = "3.2.3"
humantime = "2.1.0"
rand = "0.8.3"

[patch.crates-io]
#radio = { path = "../radio/radio" }
#radio-sx128x = { path = "../radio/radio-sx128x" }
#ieee802154 = { path = "../rust-ieee802.15.4" }

#radio = { git = "https://github.com/rust-iot/radio-hal" }
#radio-sx128x = { git = "https://github.com/rust-iot/rust-radio-sx128x" }
ieee802154 = { git = "https://github.com/ryankurte/rust-ieee802.15.4", branch = "feature/802.15.4-2015-simple" }

